--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,48 +12,48 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+        name: Set up Python 3.8
       - uses: actions/setup-python@v2
-      - with:
-      - python-version: 3.8
-      - name: Install dependencies
+        with:
+        python-version: 3.8
+        name: Install dependencies
       - run: |
-      - python -m pip install --upgrade pip
-      - pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
       - name: Build
       - run: |
-      - python -m pip install --upgrade pip
-      - pip install -r requirements.txt
-      - python setup.py sdist bdist_wheel
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        python setup.py sdist bdist_wheel
       - name: Publish to TestPyPI
       - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       - uses: pypa/gh-action-pypi-publish@master
       - with:
-      - user
-      - password
-      - repository_url: https://test.pypi.org/legacy/
-      - verbose: true
+        user: ${{ secrets.PYPI_USERNAME }}
+        password: ${{ secrets.PYPI_PASSWORD }}
+        repository_url: https://test.pypi.org/legacy/
+        verbose: true
       - name: Publish to PyPI
       - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       - uses: pypa/gh-action-pypi-publish@master
       - with:
-      - user
-      - password
-      - verbose: true
+        user: ${{ secrets.PYPI_USERNAME }}
+        password: ${{ secrets.PYPI_PASSWORD }}
+        verbose: true
       - name: Upload to S3
       - uses: jakejarvis/s3-sync-action@master
       - with:
-      - args: --acl public-read
-      - delete: true
-      - folder: dist
-      - from: .
-      - to: s3://$BUCKET_NAME/$FOLDER_NAME
-      - region: $AWS_REGION
-      - profile: $AWS_PROFILE
+        args: --acl public-read
+        delete: true
+        folder: dist
+        from: .
+        to: s3://${{ inputs.bucket }}/${{ inputs.folder }}
+        region: $AWS_REGION
+        profile: $AWS_PROFILE
       - name: Invalidate CloudFront distribution
       - uses: aws-actions/aws-cloudfront-invalidate-cache@v1
       - with:
-      - distribution-id: $DISTRIBUTION_ID
-      - paths: '/*'
-      - region: $AWS_REGION
-      - profile: $AWS_PROFILE
+        distribution-id: ${{ inputs.distribution-id }}
+        paths: '/*'
+        region: $AWS_REGION
+        profile: $AWS_PROFILE
