--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,16 @@ jobs:
         with:
         python-version: 3.8
         name: Install dependencies
-      - run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - run: python -m pip install --upgrade pip && pip install -r requirements.txt
+        name: Lint with flake8
+      - run: pip install flake8
+      - run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      - run: flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - run: pip install black
+      - run: black --check .
+        name: Test with pytest
       - name: Build
-      - run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        python setup.py sdist bdist_wheel
+      - run: python -m pip install --upgrade pip && pip install -r requirements.txt && python setup.py sdist bdist_wheel
       - name: Publish to TestPyPI
       - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       - uses: pypa/gh-action-pypi-publish@master
