--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 name: Build
-run-name: Deploy to ${{ inputs.environment }} environment on ${{ inputs.region }} region using ${{ inputs.profile }} profile and ${{ inputs.bucket }} bucket name and ${{ inputs.folder }} folder name and ${{ inputs.distribution-id }} distribution id
+run-name: Build
 on: [push]
 
 jobs:
