--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,18 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Build
+        run: |
+          python -m build
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
 #      - uses: actions/setup-python@v2
 #        with:
 #        python-version: 3.8
