fix: env release token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
           path: build.py
       - name: Release
         uses: softprops/action-gh-release@v1
+        env:
+          RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           files: build.py
           draft: true
