--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: Release
 run-name: Release
 on: [push]
-tags:
-  - v*
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -33,3 +31,7 @@ jobs:
           draft: true
           prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ github.ref }}
+          name: ${{ github.ref }}
+          body: |
+            Release ${{ github.ref }}
