--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: Release
 run-name: Release
-on:
-  push:
-    tags:
-      - 'v*.*.*'
+on: push
 jobs:
   release:
     runs-on: ubuntu-latest
