--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref }}
           name: ${{ github.ref }}
-          body_path: ${{ github.event.release.body_path }}- ${{ github.ref }}- ${{ github.sha }}
+          body_path: ${{ github.workflow }}-CHANGELOG.txt
           body: |
             Release ${{ github.ref }}
         env:
